@@ -1,6 +1,7 @@
 0.1.0   July 25, 2011
         - INCOMPATIBLE: Remove insert(), use put() instead.
         - INCOMPATIBLE: Remove remove(), use delete() instead.
+        - INCOMPATIBLE: Remove get_slice(), merge its functionality into get().
         - Support custom Thrift transport read/write.
 
 0.0.7   July 23, 2011
